# LabLocal

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml
backend/: .env.example  Makefile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
backend/labs/: biomarker_i18n.py  context_processors.py  forms.py  heart_rate.py  models.py  pdf_extraction.py  urls.py
backend/labs/management/commands/: create_admin.py  seed_biomarkers.py  seed_demo_data.py
backend/labs/migrations/: 0001_initial.py  0002_userprofile_ai_api_key.py  0003_ailicense_remove_userprofile_ai_api_key.py  0004_userprofile_smoker.py  0005_biomarker_remove_text_fields.py  0006_alter_ailicense_options_alter_analysisreport_options_and_more.py  0007_add_pdf_to_analysis.py
backend/labs/static/labs/css/: inter.css
backend/labs/static/labs/js/: ai_chat.js
backend/labs/templates/labs/: ai_chat.html  app.html  app_detail.html  base.html  dashboard.html  login.html
backend/labs/templates/labs/analysis/: detail.html  form.html  list.html
backend/labs/templates/labs/biomarkers/: detail.html  list.html
backend/labs/templates/labs/body/: detail.html  form.html  list.html
backend/labs/templates/labs/ecg/: detail.html  (+2 more)
backend/labs/views/: __init__.py  ai_proxy.py  analysis.py  biomarkers.py  body.py  core.py  dashboard.py  ecg.py  onboarding.py  profile.py  reports.py
backend/locale/es/LC_MESSAGES/: django.mo  django.po
backend/locale/pt/LC_MESSAGES/: django.mo  django.po
backend/medivault/: settings.py  urls.py  wsgi.py
(+52 files in other folders)
